# langchain-rag

./: .env  1-data-ingestion.ipynb  1-data-ingestion.py  2-dataprocessingpdf.py  3-dataparsingworddoc.py  4-dataparsingexcel.py  5-jsondataparsing.py  6-databaseparsing.py  7-rag-system.py  8-rag-system-redis.py  8-rag-system.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  students.py
chroma_db/8a205744-4d29-4f51-9f66-40ee39356434/: index_metadata.pickle
data/csv/: students.csv  students.xlsx
data/databases/: company.db
data/json_files/: employees.json
data/test_files/: sample.txt  sample2.txt
